--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    <div class="footer-credits">
+    <span class="creator-name">Creado por:</span>
+    <span class="creator-name">John Arley López</span>
+    <span class="creator-title">Docente de Sistemas</span>
+</div>
     <div class="container">
         <!-- Header -->
         <header class="header">
